--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
 	</dependency>
 	
 	<dependency>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.3.1</version>
+	</dependency>
+	
+	<dependency>
          <groupId>org.apache.velocity</groupId>
          <artifactId>velocity</artifactId>
          <version>1.7</version>
