--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,32 @@
 	<artifactId>test</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>1.3.5.RELEASE</version>
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<java.version>1.8</java.version>
+	</properties>
+	
 	<dependencies>
+		
+		 <!-- Spring Boot JDBC --> 
+		<dependency> 
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jdbc</artifactId>
+		</dependency>
+		<!-- oracle -->
+		<dependency>
+		       <groupId>com.oracle</groupId>
+		       <artifactId>ojdbc14</artifactId>
+		       <version>10.2.0.4.0</version>
+		</dependency>
+		
+		
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
