--- a/pom.xml
+++ b/pom.xml
@@ -5,6 +5,10 @@
 	<groupId>com.hsj</groupId>
 	<artifactId>mycode</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	
+	<properties>
+		<activemq.version>5.15.3</activemq.version>
+	</properties>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
@@ -68,6 +72,22 @@
 			<version>1.8.1</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-all</artifactId>
+            <version>${activemq.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.activemq</groupId>
+            <artifactId>activemq-pool</artifactId>
+            <version>${activemq.version}</version>
+        </dependency>
+<!--         <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jms</artifactId>
+            <version>${spring-framework.version}</version>
+        </dependency> -->
 
 	</dependencies>
 
