--- a/pom.xml
+++ b/pom.xml
@@ -110,13 +110,19 @@
 			<version>5.3.2</version>
 			<scope>test</scope>
 		</dependency>
-
+		<!--一个非常好用的断言编写插件-->
 		<dependency>
 			<groupId>org.assertj</groupId>
 			<artifactId>assertj-core</artifactId>
 			<!-- use 2.9.1 for Java 7 projects -->
 			<version>3.11.1</version>
 			<scope>test</scope>
+		</dependency>
+
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
 		</dependency>
 
 	</dependencies>
