--- a/pom.xml
+++ b/pom.xml
@@ -31,13 +31,13 @@
 		       <artifactId>ojdbc14</artifactId>
 		       <version>10.2.0.4.0</version>
 		</dependency>
-
-
-        <dependency>
-            <groupId>com.fasterxml.jackson.core</groupId>
-            <artifactId>jackson-databind</artifactId>
-            <version>[2.9.9.2,)</version>
-        </dependency>
+		
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.5.4</version>
+		</dependency>
 
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
