--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
 		<version>1.3.5.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
+    
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<java.version>1.8</java.version>
@@ -19,6 +20,13 @@
 	</properties>
 	
 	<dependencies>
+        <!-- https://mvnrepository.com/artifact/com.google.guava/guava -->
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.1-jre</version>
+        </dependency>
+        
         <!-- websocket引入 -->
         <dependency>
             <groupId>javax</groupId>
